# brainfuck-webasm

./: '  Cargo.toml  Makefile  README.md  editor.js  index.html  lib.rs  main.js  style.css
pkg/: brainfuck.d.ts  brainfuck.js  brainfuck_bg.wasm  brainfuck_bg.wasm.d.ts  package.json
src/: lib.rs
web/: editor.js  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
